# genesis2026

./: README.md
gen2026/: README.md  android_error_dump.txt  app.json  build_log.txt  package-lock.json  package.json
gen2026/app/: _layout.tsx
gen2026/app/(tabs)/: _layout.tsx  chat.tsx  explore.tsx  index.tsx  memory.tsx
gen2026/components/: ToastOverlay.tsx
gen2026/hooks/: use-whisper.ts
gen2026/native/bitnet/: BitnetBridge.java  BitnetPackage.java  CMakeLists.txt  bitnet_jni.cpp
gen2026/plugins/: withNotifee.js
gen2026/scripts/: run-android-dev.ps1
gen2026/services/: background-service.ts  bitnet-service.ts  llm-service.ts  memory-store.ts  native-runtime.ts  toast-service.ts  whisper-service.ts
gen2026/types/: whisper.rn.d.ts
